--- a/Project/API/appsettings.json
+++ b/Project/API/appsettings.json
@@ -19,5 +19,8 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ApplicationDbContextConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=G4T;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  }
 }
