--- a/Project/CollectionMicroservice/appsettings.json
+++ b/Project/CollectionMicroservice/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server="
+    "AzureSQLCollectionDBConnection": "Server=tcp:g4t.database.windows.net,1433;Initial Catalog=CollectionDB;Persist Security Info=False;User ID=kiet;Password=Bomaylaadmin123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
