--- a/Project/UserMicroservice/appsettings.json
+++ b/Project/UserMicroservice/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server="
+    "AzureSQLUserDBConnection": "Server=tcp:g4t.database.windows.net,1433;Initial Catalog=UserDB;Persist Security Info=False;User ID=kiet;Password=Bomaylaadmin123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
