--- a/Project/Client/Client.csproj
+++ b/Project/Client/Client.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Resource\Views\Shared\" />
+  </ItemGroup>
+
 </Project>
