Add, Search User
Add còn thiếu random password, gửi password cho người dùng.
Search displayname, username, email, phone
check null, check duplicate username, email (chưa check phone, sẽ thêm sau).
--Cần sửa
Tách check duplicate username, email và phone. Chỉ cần kiểm tra username và phone khi update user, email kiểm tra lúc tạo user

--- a/Project/UserMicroservice/UserMicroservice.csproj
+++ b/Project/UserMicroservice/UserMicroservice.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <Compile Remove="Models\SearchCriteria.cs" />
+    <Compile Remove="Models\UserViewModel.cs" />
     <Compile Remove="Utility\SearchCriteriaBuilder.cs" />
   </ItemGroup>
 
