Update jwt issuer, audiance, serect key to vault azure

--- a/Project/UserMicroservice/appsettings.json
+++ b/Project/UserMicroservice/appsettings.json
@@ -5,18 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Authentication": {
-    "Google": {
-      "ClientId": "931532368031-fve5bfiu4t6uvu5laj3gq9fbj7okl43e.apps.googleusercontent.com",
-      "ClientSecret": "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"
-    }
-  },
-  "ApiSettings": {
-    "JwtOptions": {
-      "Secret": "THIS IS 256 BYTES SECRET APP SETTINGS AND THIS IS FROM G4T JWT",
-      "Issuer": "g4t-be-api",
-      "Audience": "g4t-client"
-    }
-  }
+  "AllowedHosts": "*"
 }
