--- a/Project/Client/appsettings.json
+++ b/Project/Client/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ServiceUrls": {
+    "APIGateWay": "https://localhost:7260"
+  }
 }
