--- a/Project/Client/Client.csproj
+++ b/Project/Client/Client.csproj
@@ -30,6 +30,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Gateway\Gateway.csproj" />
+    <ProjectReference Include="..\UserMicroservice\UserMicroservice.csproj" />
   </ItemGroup>
 
 </Project>
