--- a/Project/Client/Client.csproj
+++ b/Project/Client/Client.csproj
@@ -31,10 +31,12 @@
     <PackageReference Include="MongoDB.Bson" Version="2.29.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
+    <PackageReference Include="xunit.extensibility.core" Version="2.9.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Gateway\Gateway.csproj" />
+    <ProjectReference Include="..\ProductMicroservice\ProductMicroservice.csproj" />
     <ProjectReference Include="..\UserMicroservice\UserMicroservice.csproj" />
   </ItemGroup>
 
