--- a/Project/OrderMicroservice/OrderMicroservice.csproj
+++ b/Project/OrderMicroservice/OrderMicroservice.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="MongoDB.EntityFrameworkCore" Version="8.1.1" />
     <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="X.PagedList" Version="10.5.7" />
   </ItemGroup>
 
   <ItemGroup>
