--- a/Project/Client/Client.csproj
+++ b/Project/Client/Client.csproj
@@ -46,6 +46,7 @@
     <ProjectReference Include="..\CommentMicroservice\CommentMicroservice.csproj" />
     <ProjectReference Include="..\Gateway\Gateway.csproj" />
     <ProjectReference Include="..\ProductMicroservice\ProductMicroservice.csproj" />
+    <ProjectReference Include="..\StatisticalMicroservice\StatisticalMicroservice.csproj" />
     <ProjectReference Include="..\UserMicroservice\UserMicroservice.csproj" />
   </ItemGroup>
 
