--- a/Project/Client/Client.csproj
+++ b/Project/Client/Client.csproj
@@ -14,6 +14,9 @@
   </ItemGroup>
 
   <ItemGroup>
+	  <PackageReference Include="Azure.AI.ContentSafety" Version="1.0.0" />
+	  <PackageReference Include="Azure.Identity" Version="1.13.1" />
+	  <PackageReference Include="Microsoft.Azure.CognitiveServices.ContentModerator" Version="2.0.0" />
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.3.2" />
     <PackageReference Include="BarcodeLib" Version="3.1.4" />
@@ -35,19 +38,11 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="QRCoder" Version="1.6.0" />
     <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.2.0" />
     <PackageReference Include="X.PagedList" Version="10.5.7" />
     <PackageReference Include="xunit.extensibility.core" Version="2.9.2" />
     <PackageReference Include="ZXing.Net" Version="0.16.9" />
     <PackageReference Include="ZXing.Net.Bindings.Windows.Compatibility" Version="0.16.12" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\CategoryMicroservice\CategoryMicroservice.csproj" />
-    <ProjectReference Include="..\CommentMicroservice\CommentMicroservice.csproj" />
-    <ProjectReference Include="..\Gateway\Gateway.csproj" />
-    <ProjectReference Include="..\ProductMicroservice\ProductMicroservice.csproj" />
-    <ProjectReference Include="..\StatisticalMicroservice\StatisticalMicroservice.csproj" />
-    <ProjectReference Include="..\UserMicroservice\UserMicroservice.csproj" />
   </ItemGroup>
 
 </Project>
