--- a/Project/Client/Client.csproj
+++ b/Project/Client/Client.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
 	  <PackageReference Include="Azure.AI.ContentSafety" Version="1.0.0" />
 	  <PackageReference Include="Azure.Identity" Version="1.13.1" />
+	  <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
 	  <PackageReference Include="Microsoft.Azure.CognitiveServices.ContentModerator" Version="2.0.0" />
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.3.2" />
