--- a/Project/CategoryMicroservice/appsettings.json
+++ b/Project/CategoryMicroservice/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "AzureSQLCategoryDBConnection": "Server=tcp:g4t.database.windows.net,1433;Initial Catalog=CategoryDB;Persist Security Info=False;User ID=kiet;Password=Bomaylaadmin123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-  }
+  "AllowedHosts": "*"
 }
